--- a/servicios.html
+++ b/servicios.html
@@ -14,9 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap"
         rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="images/solvent.png/">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/png" href="images/solvent.png/" />
 
     <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
@@ -37,7 +37,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html" id="home">Home</a>
                     </li>
                     <li class="nav-item">
@@ -63,7 +63,6 @@
         </div>
     </nav>
 
-
     <!-- Sección de la cabecera-->
     <section id="cabeceraServicios">
         <div class="conainer">
@@ -74,16 +73,15 @@
         </div>
     </section>
 
-
-
-
     <!-- Sección de Servicios -->
     <section class="servicios">
         <div class="container">
             <div class="content-center">
                 <h2>Precios <b>a tu medida</b></h2>
-                <p>Una amplia gama de paquetes de servicios a medida de cada circunstancia. Construye tu propia
-                    experiencia, modela cada aspecto de lo que buscas vivir y paga usando el modo que te sea mas comodo.
+                <p>
+                    Una amplia gama de paquetes de servicios a medida de cada
+                    circunstancia. Construye tu propia experiencia, modela cada aspecto
+                    de lo que buscas vivir y paga usando el modo que te sea mas comodo.
                 </p>
             </div>
         </div>
@@ -125,7 +123,6 @@
         </div>
     </section>
 
-
     <!-- Modal -->
     <div class="modal fade" id="modal-btn-dark" tabindex="-1" role="dialog" aria-labelledby="modalDelux"
         aria-hidden="true">
@@ -137,12 +134,14 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    Ha elegido el <b>Plan Delux</b>
-                </div>
+                <div class="modal-body">Ha elegido el <b>Plan Delux</b></div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar cambios</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Cerrar
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                        Guardar cambios
+                    </button>
                 </div>
             </div>
         </div>
@@ -157,16 +156,137 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    Ha elegido el <b>Plan básico</b>
-                </div>
+                <div class="modal-body">Ha elegido el <b>Plan básico</b></div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar cambios</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Cerrar
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                        Guardar cambios
+                    </button>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Sección de testimonios -->
+    <section id="testimonios">
+        <div class="container">
+            <div class="content-center">
+                <h2>Unas pocas palabras de <b>nuestros clientes...</b></h2>
+                <p>
+                    Porque no hay nada mas importante que el valor de tus experiencias,
+                    y queremos que las compartas con el mundo
+                </p>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="carousel-container">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
+                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
+                                dolorem numquam repudiandae?
+                            </p>
+                            <div class="rating">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-container">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
+                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
+                                dolorem numquam repudiandae?
+                            </p>
+                            <div class="rating">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-container">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
+                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
+                                dolorem numquam repudiandae?
+                            </p>
+                            <div class="rating">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <ion-icon name="star"></ion-icon>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <div class="control-button">
+                        <i class="icon ion-md-arrow-back"></i>
+                    </div>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <div class="control-button">
+                        <i class="icon ion-md-arrow-forward"></i>
+                    </div>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- Sección de footer -->
@@ -174,36 +294,44 @@
         <div class="container">
             <div class="content-center">
                 <h2>Ahora manten la calma, <b>estás en buenas manos</b></h2>
-                <p>Ponemos a tu disposición el mejor equipo de seguimiento, trazadores y fotógrafos. Con el mejor
-                    material y
-                    equipamiento hasta la fecha. Usando las mejores tecnicas en fisonomía, rastreo y con el horario mas
-                    amplio.
+                <p>
+                    Ponemos a tu disposición el mejor equipo de seguimiento, trazadores
+                    y fotógrafos. Con el mejor material y equipamiento hasta la fecha.
+                    Usando las mejores tecnicas en fisonomía, rastreo y con el horario
+                    mas amplio.
                 </p>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-
                     <div class="member-container">
                         <div class="member-details">
                             <h5>Michelle B. Rowe</h5>
                             <span>Directora de Operativos</span>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-group-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
-                                        name="logo-instagram"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="https://twitter.com/">
+                                <li class="list-group-intem">
+                                    <a href="https://www.instagram.com/?hl=es">
+                                        <ion-icon name="logo-instagram"></ion-icon>
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="https://twitter.com/">
                                         <ion-icon name="logo-twitter"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-youtube"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-facebook"></ion-icon>
-                                    </a></li>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
-                        <img src="images/portrait1.jpeg" class="img-fluid" alt="miembro 1">
+                        <img src="images/portrait1.jpeg" class="img-fluid" alt="miembro 1" />
                     </div>
                 </div>
 
@@ -213,21 +341,29 @@
                             <h5>Vera G. Higings</h5>
                             <span>CEO</span>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-inline-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
-                                        name="logo-instagram"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="https://twitter.com/">
+                                <li class="list-inline-intem">
+                                    <a href="https://www.instagram.com/?hl=es">
+                                        <ion-icon name="logo-instagram"></ion-icon>
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="https://twitter.com/">
                                         <ion-icon name="logo-twitter"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-youtube"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-facebook"></ion-icon>
-                                    </a></li>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
-                        <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2">
+                        <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2" />
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -236,26 +372,33 @@
                             <h5>Robert T. Bridges</h5>
                             <span>Lead Photographer</span>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-inline-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
-                                        name="logo-instagram"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="https://twitter.com/">
+                                <li class="list-inline-intem">
+                                    <a href="https://www.instagram.com/?hl=es">
+                                        <ion-icon name="logo-instagram"></ion-icon>
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="https://twitter.com/">
                                         <ion-icon name="logo-twitter"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-youtube"></ion-icon>
-                                    </a></li>
-                                <li class="list-group-intem"><a href="">
+                                    </a>
+                                </li>
+                                <li class="list-group-intem">
+                                    <a href="">
                                         <ion-icon name="logo-facebook"></ion-icon>
-                                    </a></li>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
-                        <img src="images/portrait3.jpeg" class="img-fluid" alt="miembro 3">
+                        <img src="images/portrait3.jpeg" class="img-fluid" alt="miembro 3" />
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
