added carousel in progres

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
+  <nav role="navigation" class="navbar navbar-expand-lg fixed-top">
     <!-- fixed-top nos permite dejar fija la barra de navegación aunque hagamos scroll-->
     <div class="container">
       <a class="navbar-brand" href="#"><img src="images/solvent.png" class="logo-brand" alt="logo" /></a>
@@ -33,7 +33,7 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <ion-icon name="menu-outline"></ion-icon>
       </button>
-
+      
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
@@ -62,7 +62,7 @@
     </div>
   </nav>
 
-  <!-- ////////////////////// 51:26 ///////////////////////-->
+
   <!-- Sección de la cabecera-->
   <section id="hero">
     <div class="conainer">
