--- a/servicios.html
+++ b/servicios.html
@@ -85,8 +85,9 @@
                 </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
+
+        <div class="row justify-content-around">
+            <div class="col-md-6 col-lg-4">
                 <div class="servicios-container">
                     <div class="plans plan-light">
                         <h4>Plan básico</h4>
@@ -103,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-lg-4">
                 <div class="servicios-container">
                     <div class="plans plan-dark">
                         <h4>Plan Delux</h4>
@@ -170,7 +171,7 @@
     </div>
 
     <!-- Sección de testimonios -->
-    <section id="testimonios">
+    <section id="testimonial">
         <div class="container">
             <div class="content-center">
                 <h2>Unas pocas palabras de <b>nuestros clientes...</b></h2>
@@ -189,9 +190,9 @@
                     <div class="carousel-item active">
                         <div class="carousel-container">
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
-                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
-                                dolorem numquam repudiandae?
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Rerum neque ea facilis voluptatem ipsam blanditiis, libero
+                                quaerat dolorem numquam repudiandae?
                             </p>
                             <div class="rating">
                                 <ul class="list-inline">
@@ -213,7 +214,19 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="testimonial-user">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <img src="images/testimonial1.jpeg" alt="testimonial user 1" />
+                                </div>
+                                <div class="col-md-9">
+                                    <h6>Jhon F. Mayer</h6>
+                                    <span>Drama Actor</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="carousel-item">
                         <div class="carousel-container">
                             <p>
@@ -241,7 +254,20 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="testimonial-user">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <img src="images/testimonial2.jpeg" alt="testimonial user 2" />
+                                </div>
+                                <div class="col-md-9">
+                                    <h6>Melisa B. Jordan</h6>
+                                    <span>Influencer</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
+
                     <div class="carousel-item">
                         <div class="carousel-container">
                             <p>
@@ -269,24 +295,33 @@
                                 </ul>
                             </div>
                         </div>
-                        
+                        <div class="testimonial-user">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <img src="images/testimonial3.jpeg" alt="testimonial user 3" />
+                                </div>
+                                <div class="col-md-9">
+                                    <h6>Jyn J. Spencer</h6>
+                                    <span>Ran Ceo</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <div class="control-button">
-                        <i class="icon ion-md-arrow-back"></i>
+                        <ion-icon name="chevron-back-outline"></ion-icon>
                     </div>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                     <div class="control-button">
-                        <i class="icon ion-md-arrow-forward"></i>
+                        <ion-icon name="chevron-forward-outline"></ion-icon>
                     </div>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-        </div>
     </section>
-
 
 
     <!-- Sección de footer -->
@@ -366,6 +401,8 @@
                         <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2" />
                     </div>
                 </div>
+
+
                 <div class="col-md-4">
                     <div class="member-container">
                         <div class="member-details">
