--- a/servicios.html
+++ b/servicios.html
@@ -230,9 +230,7 @@
                     <div class="carousel-item">
                         <div class="carousel-container">
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
-                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
-                                dolorem numquam repudiandae?
+                                Genial! Ha sido toda una experiencia y lo recomiendo mucho.
                             </p>
                             <div class="rating">
                                 <ul class="list-inline">
@@ -271,9 +269,7 @@
                     <div class="carousel-item">
                         <div class="carousel-container">
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
-                                neque ea facilis voluptatem ipsam blanditiis, libero quaerat
-                                dolorem numquam repudiandae?
+                                Ha sido increible. Casi he podido verme como una estrella de cine. 
                             </p>
                             <div class="rating">
                                 <ul class="list-inline">
